fix legend gap

--- a/web/client/themes/default/less/toc.less
+++ b/web/client/themes/default/less/toc.less
@@ -413,7 +413,7 @@
 .ms-legend {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 4px;
     ul& {
         border-left: none;
         padding-left: 0;
